# py-core

./: pyproject.toml
core/: __init__.py  discord_message_sender.py  firestore_client.py  func_test_discord_message_sender.py  func_test_mailer.py  func_test_notification_message_templates.py  func_test_tpl.py  mailer.py  notification_message_templates.py  rst.py  rst_to_html.py  slack_message.py  test_slack_message.py  tpl.py
core/templates/: arrivals_and_departures_fr.txt  email_base.rst  test_fr.txt
