[tool.poetry]
name = "core"
version = "3"
description = ""
authors = ["Tony <tony.lbvre@gmail.com>"]
packages = [
    { include = "core" },
]

[tool.poetry.dependencies]
firebase-admin = "^4.5.3"
python = "^3.9"
Jinja2 = "^2.11.3"
Babel = "^2.9.0"
sendgrid = "^6.7.0"
python-box = "^5.3.0"
slack-sdk = "^3.5.0"
docutils = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
